[project]
name = "discharge-agent"
version = "0.1.0"
description = "Agentic AI system for patient discharge summary generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "fastembed>=0.2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
